Fixed navbar spacing + hover title

--- a/public/styles.css
+++ b/public/styles.css
@@ -154,13 +154,25 @@ li.nav-bprofile:hover {
   background: #898f83;
 }
 
-li.nav-logout {
-  margin-bottom: 30px;
+.nav-logout {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 20px;
+  width: 100%;
+  height: 40px;
 }
 
-li.nav-logout:hover {
-  margin-bottom: 30px;
+.nav-logout:hover {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   height: auto;
+  width: 100%;
+  height: 40px;
+  margin-bottom: 20px;
   background: #898f83;
 }
 
